Revision history for CGI-Info

0.72
	More sensible default statuses when params() has yet to be called
	Ensure \u0026 is interpreted as &

0.71	Wed Feb  3 15:14:13 EST 2021
	Added t/fixme.t
	Use JSON module instead of JSON::Parse as the latter has dropped support for Solaris
	Allow status to be set, this will be used later by CGI::Allow

0.70	Fri  7 Jun 12:39:52 EDT 2019
	Allow logdir() and tmpdir() to be called as a class methods
	Fix http://www.cpantesters.org/cpan/report/78a1401c-42de-11e9-bf31-80c71e9d5857
	Trap SQL injections with SELECT statements

0.69	Sat  9 Mar 19:28:32 EST 2019
	Added logdir()

0.68	Fri Dec  7 08:14:21 EST 2018
	Allow a parameter to have the value 0

0.67	Tue Mar 27 12:31:12 EDT 2018
	Remove the 'provides' tag

0.66	Thu Dec 14 18:36:31 EST 2017
	Added MyLogger to the MANIFEST

0.65	Tue Dec 12 16:54:42 EST 2017
	Fix breakage on 5.27.5 and beyond (Github issue 7)
	Send 501 on unknown request, not 405
	Bump minimum version of File::Spec
	Use List::MoreUtils instead of grep

0.64	Thu Oct 12 10:30:18 EDT 2017
	Added mechanism to speak to setlogsock - useful for Dreamhost customers
	Added set_logger

0.63	Wed Jul  5 20:57:31 EDT 2017
	When preventing SQL injection or XSS, don't return any parameters, since
		it's best to assume everything is poisoned
	Added max_upload_size to new()
	OPTIONS shouldn't get through to CGI::Info, so disallow it

0.62	Wed 21 Dec 09:28:36 EST 2016
	Added status() method
	Set maximum file upload size to 512K

0.61	Thu  1 Dec 21:46:44 EST 2016
	Missed bin/* from the MANIFEST

0.60	Thu Dec  1 14:42:37 EST 2016
	Handle JSON POST data
	AUTOLOAD parameters
	Added the cookie() method
	Added Appveyor support to CI test on Windows
	Added tests that the framework to allow CGI scripts to be tested from
		the command line work
	Added Travis and Coveralls integration
	Mark some SEO scanners as robots
	On unknown input, debug what it is
	Added seznambot as a search engine

0.59	Tue Apr 12 17:38:03 EDT 2016